# babynames

./: .gitignore  README.md  pyproject.toml
babynames/: app.py  config.cfg  database.py  manage.py
