[tool.poetry]
name = "babynames"
version = "0.1.0"
description = ""
authors = ["Kevin Zeidler"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "1.1.4"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.5.1"
pandas = "^1.3.4"
plotly = "^5.4.0"
wheel = "^0.37.0"
setuptools = "^59.3.0"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
